[tool.poetry]
name = "sarabanda"
version = "0.1.0"
description = ""
authors = ["Gioo9le <g.minoccari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-SocketIO = "^5.2.0"
tekore = "^4.4.0"
Flask-Cors = "^3.0.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"